--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -187,7 +187,7 @@
 
     </div>
 </div>
-
+<script type ='text/javascript' src ='script.js'></script>
 <script  type="text/javascript">
     // Chosen CSS
     var config = {
