fully working model

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -191,7 +191,7 @@
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <!-- my Java script for making the post request -->
 <script  src ="/static/script.js"></script>
-<!--<script  src="/static/config.js"></script>-->
+<script  src="/static/config.js"></script>
 
 </body>
 
